Form Validator feature

--- a/AwesomeReact/AwesomeReact.csproj
+++ b/AwesomeReact/AwesomeReact.csproj
@@ -16,6 +16,7 @@
     <None Remove="ClientApp\interfaces\IRegisterFormModel.ts" />
     <None Remove="ClientApp\models\index.ts" />
     <None Remove="ClientApp\models\RegisterModel.ts" />
+    <None Remove="ClientApp\services\FormInputValidator.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +36,7 @@
     <TypeScriptCompile Include="ClientApp\interfaces\IRegisterFormModel.ts" />
     <TypeScriptCompile Include="ClientApp\models\index.ts" />
     <TypeScriptCompile Include="ClientApp\models\RegisterModel.ts" />
+    <TypeScriptCompile Include="ClientApp\services\FormInputValidator.ts" />
     <TypeScriptCompile Include="ClientApp\tagComponents\FormElementErrors.tsx" />
   </ItemGroup>
 
