--- a/AwesomeReact/AwesomeReact.csproj
+++ b/AwesomeReact/AwesomeReact.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.5</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -16,6 +16,7 @@
     <None Remove="ClientApp\models\index.ts" />
     <None Remove="ClientApp\models\RegisterModel.ts" />
     <None Remove="ClientApp\services\FormInputValidator.ts" />
+    <None Remove="ClientApp\services\index.ts" />
     <None Remove="ClientApp\services\RulesValidator.ts" />
   </ItemGroup>
 
@@ -36,6 +37,7 @@
     <TypeScriptCompile Include="ClientApp\models\index.ts" />
     <TypeScriptCompile Include="ClientApp\models\RegisterModel.ts" />
     <TypeScriptCompile Include="ClientApp\services\FormInputValidator.ts" />
+    <TypeScriptCompile Include="ClientApp\services\index.ts" />
     <TypeScriptCompile Include="ClientApp\services\RulesValidator.ts" />
     <TypeScriptCompile Include="ClientApp\tagComponents\FormElementErrors.tsx" />
   </ItemGroup>
