Added notification module

--- a/AwesomeReact/AwesomeReact.csproj
+++ b/AwesomeReact/AwesomeReact.csproj
@@ -15,6 +15,8 @@
     <None Remove="ClientApp\interfaces\index.ts" />
     <None Remove="ClientApp\models\index.ts" />
     <None Remove="ClientApp\models\RegisterModel.ts" />
+    <None Remove="ClientApp\modules\arNoti\components\notify.tsx" />
+    <None Remove="ClientApp\services\Feedback.ts" />
     <None Remove="ClientApp\services\FormInputValidator.ts" />
     <None Remove="ClientApp\services\index.ts" />
     <None Remove="ClientApp\services\RulesValidator.ts" />
@@ -36,6 +38,8 @@
     <TypeScriptCompile Include="ClientApp\interfaces\index.ts" />
     <TypeScriptCompile Include="ClientApp\models\index.ts" />
     <TypeScriptCompile Include="ClientApp\models\RegisterModel.ts" />
+    <TypeScriptCompile Include="ClientApp\modules\arNoti\notify.tsx" />
+    <TypeScriptCompile Include="ClientApp\services\Feedback.ts" />
     <TypeScriptCompile Include="ClientApp\services\FormInputValidator.ts" />
     <TypeScriptCompile Include="ClientApp\services\index.ts" />
     <TypeScriptCompile Include="ClientApp\services\RulesValidator.ts" />
