--- a/AwesomeReact/package.json
+++ b/AwesomeReact/package.json
@@ -32,7 +32,8 @@
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2",
-    "bluebird": "^3.5.1"
+    "bluebird": "^3.5.1",
+    "react-cookie": "2.1.1"
   },
   "dependencies": {
     "@types/object-assign": "^4.0.30",
